--- a/index.html
+++ b/index.html
@@ -117,20 +117,19 @@
 					the following topics:
 				<ul>
 					<li>
-						<strong>Large language models</strong> for complex reasoning and content generation
+						<strong>Large language models</strong> for planning, reasoning, and generation
 					</li>
 					<li>
-						<strong>Mathematical reasoning</strong> in educational scenarios (e.g., math, science, and
-						geometry)
+						<strong>Mathematical reasoning</strong> in mathematics, sciences, geometry, and medical domains
 					</li>
 					<li>
-						<strong>Trustworthy NLP models</strong> that are explainable and human-in-loop
+						<strong>Trustworthy NLP models</strong> that are explanable, reliable, and socially responsible
 					</li>
 					<li>
 						<strong>Conversational agents</strong> that are value-aware and socially intelligent
 					</li>
 					<li>
-						<strong>Multimodal learning</strong> in vision-and-language applications (e.g., VQA, image
+						<strong>Multimodal reasoning</strong> for vision-and-language applications (e.g., VQA, image
 						captioning)
 					</li>
 				</ul>
@@ -170,6 +169,15 @@
 		<h3 id="News" style="">News</h3>
 		<hr>
 		<ul>
+			<li>
+				<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+				A paper on multimodal procedural planning is available at
+				<b><a href="https://arxiv.org/abs/2305.01795" target="_blank">Preprint</a></b>.
+			</li>
+			<li>
+				<strong>[05/2023]&nbsp;  <font color="red">New!</font></strong>
+				One survey paper on deep learning for mathematical reasoning is accepted to <b>ACL 2023</b></font></b>.
+			</li>
 			<li>
 				<strong>[04/2023]&nbsp; <font color="red">New!</font></strong>
 				<b><a href="https://github.com/ZrrSkywalker/LLaMA-Adapter" target="_blank">LLaMA-Adapter-V2</a></b>, 
@@ -257,7 +265,7 @@
 				One paper on socially intelligent agents is accepted to <b>SIGDIAL 2022</b>.
 			</li>
 			<li>
-				<strong>[04/2022]&nbsp; <font color="red">New!</font></strong>
+				<strong>[04/2022]&nbsp;</strong>
 				Excited to be listed as a
 				<b><a href="https://iclr.cc/Conferences/2022/Reviewers" target="_blank">Highlighted Reviewer</a></b>
 				for ICLR 2022.
@@ -357,6 +365,30 @@
 				<a href="https://twitter.com/lupantech/status/1605400505697841155" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/papers_daily/status/1607232372289724416" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/acl23_dl4math.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- MPP -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_mpp.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://github.com/YujieLu10/TIP">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">Multimodal Procedural Planning via Dual Text-Image Prompting</font>
+				</b><br>
+				Yujie Lu, <b>Pan Lu</b>, Zhiyu Chen, Wanrong Zhu, Xin Eric Wang, William Yang Wang<br>
+				<b><a href="https://arxiv.org/abs/2305.01795" target="_blank">arXiv:2305.01795&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2305.01795" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv23_mpp.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/YujieLu10/TIP" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/yujielu_10/status/1653928324408958977" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/_akhaliq/status/1653922454933319680" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/arxiv23_mpp.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
@@ -1020,6 +1052,10 @@
 		<h3 id="Teaching" style="">Teaching</h3>
 		<hr>
 		<ul>
+			<li>
+				<strong>Guest Lecturer</strong>, <em>CS 263: Natural Language Processing</em><br>
+				Graduate, UCLA, Spring 2023
+			</li>
 			<li>
 				<strong>Teaching Associate</strong>, <em>ECE C247: Neural Networks and Deep Learning</em><br>
 				Graduate, UCLA, Winter 2023
