--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
-					<font color="black">LLaMA-Adapter: Efficient Fine-tuning of Language Models with Zero-init Attention					</font>
+					<font color="black">LLaMA-Adapter V2: Efficient Fine-tuning of Language Models with Zero-init Attention					</font>
 				</b><br>
 				Renrui Zhang, Jiaming Han, Aojun Zhou, Xiangfei Hu, Shilin Yan, <b>Pan Lu</b>, Hongsheng Li, Peng Gao, Yu Qiao
 				<br>
