--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
 					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
-					<font color="black">LLaMA-Adapter V2: Efficient Fine-tuning of Language Models with Zero-init Attention					</font>
+					<font color="black">LLaMA-Adapter V2: LLaMA-Adapter V2: Parameter-Efficient Visual Instruction Model</font>
 				</b><br>
-				Renrui Zhang, Jiaming Han, Aojun Zhou, Xiangfei Hu, Shilin Yan, <b>Pan Lu</b>, Hongsheng Li, Peng Gao, Yu Qiao
+				Peng Gao, Jiaming Han, Renrui Zhang, Ziyi Lin, Shijie Geng, Aojun Zhou, Wei Zhang, <b>Pan Lu</b>, Conghui He, Xiangyu Yue, Hongsheng Li, Yu Qiao
 				<br>
 				<b><a href="https://arxiv.org/abs/2304.15010" target="_blank">arXiv:2304.15010&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2304.15010" target="_blank"> <small>[Paper]&nbsp;</small></a>
