--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
-					<font color="black">LLaMA-Adapter V2: LLaMA-Adapter V2: Parameter-Efficient Visual Instruction Model</font>
+					<font color="black">LLaMA-Adapter V2: Parameter-Efficient Visual Instruction Model</font>
 				</b><br>
 				Peng Gao, Jiaming Han, Renrui Zhang, Ziyi Lin, Shijie Geng, Aojun Zhou, Wei Zhang, <b>Pan Lu</b>, Conghui He, Xiangyu Yue, Hongsheng Li, Yu Qiao
 				<br>
