--- a/index.html
+++ b/index.html
@@ -171,6 +171,16 @@
 		<ul>
 			<li>
 				<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+				Honored to deliver a invited talk on tool-augmented LLMs at Google Brain. 
+				<b><a href="docs/Chameleon_LLM_Pan_Lu_Google_Brain_2023.05.05.pdf" target="_blank">[Slides]</a></b>
+			</li>
+			<li>
+				<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+				Delighted to join prestigious <b><a href="https://lightning.ai/" target="_blank">LightingAI</a></b>
+				event as invited speaker on Discord. 
+			</li>
+			<li>
+				<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
 				A paper on multimodal procedural planning is available at
 				<b><a href="https://arxiv.org/abs/2305.01795" target="_blank">Preprint</a></b>.
 			</li>
