--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<strong>Mathematical reasoning</strong> in mathematics, sciences, geometry, and medical domains
 					</li>
 					<li>
-						<strong>Trustworthy NLP models</strong> that are explanable, reliable, and socially responsible
+						<strong>Trustworthy NLP models</strong> that are explainable, reliable, and socially responsible
 					</li>
 					<li>
 						<strong>Conversational agents</strong> that are value-aware and socially intelligent
@@ -1011,7 +1011,7 @@
 			<li>
 				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and
 					Autonomy</em>, <em>UCLA</em>, 2019.9 - Present<br>
-				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
+				Advisor: Prof. <a href="http://web.cs.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
 			</li>
 			<li>
 				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - 2022.12 <br>
