--- a/index.html
+++ b/index.html
@@ -147,6 +147,9 @@
 			<a target="_blank" href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en">
 				<font color="gray"><i class="ai ai-google-scholar ai-lg"></i></font>
 			</a>&emsp;
+			<a target="_blank" href="https://www.semanticscholar.org/author/Pan-Lu/2887562">
+				<font color="gray"><i class="ai ai-semantic-scholar ai-lg"></i></font>
+			</a>&emsp;
 			<a target="_blank" href="https://github.com/lupantech">
 				<font color="gray"><i class="fab fa-github fa-lg"></i></font>
 			</a>&emsp;
@@ -169,6 +172,13 @@
 		<h3 id="News" style="">News</h3>
 		<hr>
 		<ul>
+			<li>
+				<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
+				One paper on theorem-driven math question answering
+				(<b><a href="https://github.com/wenhuchen/TheoremQA" target="_blank">TheoremQA</a></b>)
+				is available at
+				<b><a href="https://arxiv.org/abs/2305.12524" target="_blank">Preprint</a></b>.
+			</li>
 			<li>
 				<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
 				Honored to deliver a invited talk on tool-augmented LLMs at Google Brain. 
@@ -355,50 +365,25 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
-		<!-- Survey -->
+		<!-- TheoremQA -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/acl23_dl4math.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_theoremqa.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
-				<a href="https://github.com/lupantech/dl4math">
+				<a href="https://github.com/wenhuchen/TheoremQA">
 					<img src="logos/fire.png" id="logo">
 				</a>
 				<b>
-					<font color="black">A Survey of Deep Learning for Mathematical Reasoning</font>
+					<font color="black">TheoremQA: A Theorem-driven Question Answering Dataset</font>
 				</b><br>
-				<b>Pan Lu</b>, Liang Qiu, Wenhao Yu, Sean Welleck, Kai-Wei Chang<br>
-				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">ACL 2023&nbsp;</a></b>
-				<a href="https://arxiv.org/abs/2212.10535" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/acl23_dl4math.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/lupantech/dl4math" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://twitter.com/lupantech/status/1605400505697841155" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="https://twitter.com/papers_daily/status/1607232372289724416" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="bibs/acl23_dl4math.txt" target="_blank"> <small>[BibTex]</small></a><br>
-			</div>
-		</div>
-		<hr>
-
-		<!-- MPP -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv23_mpp.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<a href="https://github.com/YujieLu10/TIP">
-					<img src="logos/fire.png" id="logo">
-				</a>
-				<b>
-					<font color="black">Multimodal Procedural Planning via Dual Text-Image Prompting</font>
-				</b><br>
-				Yujie Lu, <b>Pan Lu</b>, Zhiyu Chen, Wanrong Zhu, Xin Eric Wang, William Yang Wang<br>
-				<b><a href="https://arxiv.org/abs/2305.01795" target="_blank">arXiv:2305.01795&nbsp;</a></b>
-				<a href="https://arxiv.org/abs/2305.01795" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/arxiv23_mpp.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/YujieLu10/TIP" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://twitter.com/yujielu_10/status/1653928324408958977" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="https://twitter.com/_akhaliq/status/1653922454933319680" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="bibs/arxiv23_mpp.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				Wenhu Chen, Ming Yin, Max Ku, <b>Pan Lu</b>, Yixin Wan, Xueguang Ma, Jianyu Xu, Xinyi Wang, Tony Xia<br>
+				<b><a href="https://arxiv.org/abs/2305.12524" target="_blank">arXiv:2305.12524&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2305.12524" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv23_theoremqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/wenhuchen/TheoremQA" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/WenhuChen/status/1660832837715611648" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="bibs/arxiv23_theoremqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
@@ -421,6 +406,7 @@
 				<a href="https://arxiv.org/abs/2304.15010" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/arxiv23_llamav2.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/ZrrSkywalker/LLaMA-Adapter" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="http://llama-adapter.opengvlab.com/" target="_blank"> <small>[Gradio]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1652022897563795456" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://www.youtube.com/watch?v=GAJyWkkSd8M&ab_channel=BruinTech" target="_blank"> <small>[YouTube]&nbsp;</small></a>
 				<!-- <a href="https://twitter.com/_akhaliq/status/1640884275439628288" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
@@ -476,6 +462,54 @@
 				<a href="https://twitter.com/lupantech/status/1640899600281395200" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/_akhaliq/status/1640884275439628288" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv23_llama.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+		
+		<!-- Survey -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/acl23_dl4math.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://github.com/lupantech/dl4math">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">A Survey of Deep Learning for Mathematical Reasoning</font>
+				</b><br>
+				<b>Pan Lu</b>, Liang Qiu, Wenhao Yu, Sean Welleck, Kai-Wei Chang<br>
+				<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">ACL 2023&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2212.10535" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/acl23_dl4math.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/dl4math" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1605400505697841155" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/papers_daily/status/1607232372289724416" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/acl23_dl4math.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- MPP -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_mpp.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://github.com/YujieLu10/TIP">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">Multimodal Procedural Planning via Dual Text-Image Prompting</font>
+				</b><br>
+				Yujie Lu, <b>Pan Lu</b>, Zhiyu Chen, Wanrong Zhu, Xin Eric Wang, William Yang Wang<br>
+				<b><a href="https://arxiv.org/abs/2305.01795" target="_blank">arXiv:2305.01795&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2305.01795" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv23_mpp.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/YujieLu10/TIP" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/yujielu_10/status/1653928324408958977" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/_akhaliq/status/1653922454933319680" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/arxiv23_mpp.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
