--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <title>Pan Lu</title>
 
 
-<body style="font-size: 18px">
+<body style="">
 	<!-- Navigation Labels -->
 	<!-- <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #003262;"> -->
 	<nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #003262; font-size: 22px">
@@ -182,7 +182,7 @@
 
 	<div class="container">
 		<div class="container" id="div-twitter">
-			<a class="twitter-timeline" id="twitter" data-width=45% data-height=1000 data-theme=light
+			<a class="twitter-timeline" id="twitter" data-width=40% data-height=1000 data-theme=light
 				href="https://twitter.com/lupantech?ref_src=twsrc%5Etfw">Tweets by lupantech</a>
 			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
