--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 						I'm currently a fourth-year Ph.D. candidate in the Computer Science Department at UCLA, supervised by <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a> and <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a>. I am a member of <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank">UCLA Dissertation Year Fellowship</a>, <a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>, <a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>, and NeurIPS Scholar Award.
 					</p>
 					<p>
-						My long-term research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on machine reasoning and trustworthy AI, particularly in the domains of mathematics, science, and education:
+						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine reasoning</strong> and <strong>trustworthy AI</strong>, particularly in the domains of mathematics, science, and education:
 					</p>
 					<ul>
 						<li>
