--- a/index.html
+++ b/index.html
@@ -191,8 +191,13 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
+					I am co-organizing the 3rd <b><a href="https://mathai2023.github.io/" target="_blank">MATH-AI</a></b>
+					Workshop at <b>NeurIPS 2023</b>. See you in New Orleans!
+				</li>
+				<li>
 					<strong>[06/2023]&nbsp; <font color="red">New!</font></strong>
-					Excited to receive <b><a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank"> UCLA Dissertation Year Fellowship</a></b>. 
+					 <b><a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank"> UCLA Dissertation Year Fellowship</a></b>. 
 				</li>
 				<li>
 					<strong>[05/2023]&nbsp; <font color="red">New!</font></strong>
@@ -1145,6 +1150,11 @@
 		<hr>
 		<h4 id="Service" style="">Workshops and Tutorials</h3>
 			<ul>
+				<li>
+					<strong>Co-chair</strong>, NeurIPS 2022 Workshop on
+					<a href="https://mathai2023.github.io/" target="_blank">MATH-AI: The 3rd Workshop on Mathematical Reasoning and AI</a>,
+					New Orleans, 2023.12
+				</li>
 				<li>
 					<strong>Primary speaker</strong>, IJCAI 2023 Tutorial on
 					<a href="https://ijcai-23.org/" target="_blank">Deep Learning in Mathematical Reasoning: Recent Advances and Beyond</a>,
