--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[ACL-23]</a>
 							<a href="https://arxiv.org/abs/2209.14610" target="_blank">[ICLR-23]</a>
 							<a href="https://arxiv.org/abs/2212.02746" target="_blank">[EMNLP-22]</a>
-							<a href="https://arxiv.org/abs/2209.09513" target="_blank">[NeurIPS-22]</a>
 							<a href="https://arxiv.org/abs/2110.13214" target="_blank">[NeurIPS-21]</a>
+							<a href="https://arxiv.org/abs/2105.04165" target="_blank">[ACL-21]</a>
 						</li>
 						<li>
 							<strong>Tool augmented large language models</strong> for planning, reasoning, and generation <a href="" target="_blank">[Chameleon]</a>
