--- a/index.html
+++ b/index.html
@@ -406,6 +406,28 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
+		<!-- KokoMind -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/kokomind2023.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://chats-lab.github.io/KokoMind/">
+					<img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">KokoMind: Can LLMs Understand Social Interactions?</font>
+				</b><br>
+				Weiyan Shi*, Liang Qiu*, Dehong Xu, Pengwei Sui, <b>Pan Lu</b>, Zhou Yu<br>
+				<a href="https://chats-lab.github.io/KokoMind/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://github.com/CHATS-lab/KokoMind/tree/main" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1676708418697203713" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/shi_weiyan/status/1676697071674601473" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="bibs/kokomind2023.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- TheoremQA -->
 		<div class="row">
 			<div class="col-md-3">
