add best ai paper

--- a/index.html
+++ b/index.html
@@ -523,6 +523,10 @@
 				<a href="https://twitter.com/lupantech/status/1648879085115052033" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/_akhaliq/status/1648851856930533378" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv23_chameleon.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a id="best" href="https://alphasignalai.beehiiv.com/p/weeks-top-5-ai-papers?utm_source=alphasignalai.beehiiv.com&utm_medium=newsletter&utm_campaign=this-week-s-top-5-ai-papers" target="_blank">
+					<font color="red"><b>Best Weekly AI Paper</b> </font>
+				</a>
+				(by AlphaSignal, 1st in 1682, 0.06%)
 			</div>
 		</div>
 		<hr>
