--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[09/2023]&nbsp; <font color="red">New!</font></strong>
+					One paper on augmented LLMs is accepted to
+					<b><a href="https://nips.cc/Conferences/2023" target="_blank">NeurIPS 2023</a></b>.
+				</li>
+				<li>
 					<strong>[07/2023]&nbsp; <font color="red">New!</font></strong>
 					One paper on a scientific reasoning benchmark
 					(<b><a href="https://arxiv.org/abs/2307.10635" target="_blank">SciBench</a></b>)
@@ -428,7 +433,7 @@
 				</b><br>
 				<b>Pan Lu</b>, Baolin Peng, Hao Cheng, Michel Galley, Kai-Wei Chang, Ying Nian Wu, Song-Chun Zhu, Jianfeng Gao
 				<br>
-				<b><a href="https://arxiv.org/abs/2304.09842" target="_blank">arXiv:2304.09842&nbsp;</a></b>
+				<b><a href="https://arxiv.org/abs/2304.09842" target="_blank">NeurIPS 2023&nbsp;</a></b>
 				<a href="https://chameleon-llm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://arxiv.org/abs/2304.09842" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/arxiv23_chameleon.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
