--- a/index.html
+++ b/index.html
@@ -121,14 +121,22 @@
 				<div class="col-md-12">
 					<br>
 					<p> 
-						I'm currently a fourth-year Ph.D. candidate in the Computer Science Department at UCLA, supervised by <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a> and <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a>. I am a member of <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy</a> and <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank">UCLA Dissertation Year Fellowship</a>, <a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>, <a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>, and NeurIPS Scholar Award.
+						I'm currently a fourth-year Ph.D. candidate in the Computer Science Department at UCLA, supervised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
+						Amazon PhD Fellowship, Bloomberg PhD Fellowship, Qualcomm Innovation Fellowship, UCLA Dissertation Year Fellowship, 
+						<a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
+						<a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>, 
+						and NeurIPS Scholar Award.
+
+						<!-- <a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
+						<a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a> -->
 					</p>
 					<p>
-						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine reasoning</strong> and <strong>trustworthy AI</strong>, particularly in the domains of mathematics, science, and education:
+						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine reasoning</strong> and <strong>trustworthy NLP</strong>, particularly in the domains of mathematics, science, and education:
 					</p>
 					<ul>
 						<li>
 							<strong>Mathematical reasoning</strong> for problem solving, theorem proving, and scientific discovery 
+							<a href="https://mathvista.github.io/" target="_blank">[MathVista]</a>
 							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a>
 							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[ACL-23]</a>
 							<a href="https://arxiv.org/abs/2209.14610" target="_blank">[ICLR-23]</a>
@@ -194,8 +202,14 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
+					One paper on mathematical reasoning in visual contexts
+					(<b><a href="https://arxiv.org/abs/2310.02255." target="_blank">MathVista</a></b>)
+					is submitted to <b>Preprint</b>.
+				</li>
+				<li>
 					<strong>[09/2023]&nbsp; <font color="red">New!</font></strong>
-					One paper on augmented LLMs is accepted to
+					One paper on tool-augmented LLMs is accepted to
 					<b><a href="https://nips.cc/Conferences/2023" target="_blank">NeurIPS 2023</a></b>.
 				</li>
 				<li>
@@ -308,32 +322,32 @@
 					<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
 					Two papers on mathematical reasoning are accepted to <b>EMNLP 2022</b>.
 				</li>
-				<li>
-					<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
-					One paper on prompt learning for math reasoning
-					(<b><a href="https://tabmwp.github.io/" target="_blank">PromptPG</a></b>)
-					is submitted to <b>Preprint</b>.
-				</li>
-				<li>
-					<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
-					One paper on chain-of-thought reasoning for
-					<b><a href="https://scienceqa.github.io/" target="_blank">ScienceQA</a></b>
-					is accepted to <b>NeurIPS 2022</b>.
-				</li>
-				<li>
-					<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
-					I am co-organizing the 2nd <b><a href="https://mathai2022.github.io/" target="_blank">MATH-AI</a></b>
-					Workshop at <b>NeurIPS 2022</b>. See you in New Orleans!
-				</li>
-				<li>
-					<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
-					One paper on socially intelligent agents is accepted to <b>SIGDIAL 2022</b>.
-				</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
+							One paper on prompt learning for math reasoning
+							(<b><a href="https://tabmwp.github.io/" target="_blank">PromptPG</a></b>)
+							is submitted to <b>Preprint</b>.
+						</li>
+						<li>
+							<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
+							One paper on chain-of-thought reasoning for
+							<b><a href="https://scienceqa.github.io/" target="_blank">ScienceQA</a></b>
+							is accepted to <b>NeurIPS 2022</b>.
+						</li>
+						<li>
+							<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
+							I am co-organizing the 2nd <b><a href="https://mathai2022.github.io/" target="_blank">MATH-AI</a></b>
+							Workshop at <b>NeurIPS 2022</b>. See you in New Orleans!
+						</li>
+						<li>
+							<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
+							One paper on socially intelligent agents is accepted to <b>SIGDIAL 2022</b>.
+						</li>
 						<li>
 							<strong>[04/2022]&nbsp;</strong>
 							Excited to be listed as a
@@ -418,6 +432,32 @@
 		<h3 id="Publications" style="">Selected Publications</h3>
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- MathVista -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_mathvista.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://mathvista.github.io/">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">MathVista: Evaluating Mathematical Reasoning of Foundation Models in Visual Contexts</font>
+				</b><br>
+				<b>Pan Lu</b>, Hritik Bansal, Tony Xia, Jiacheng Liu, Chunyuan Li, Hannaneh Hajishirzi, Hao Cheng, Kai-Wei Chang, Michel Galley, Jianfeng Gao
+				<br>
+				<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">arXiv:2310.02255&nbsp;</a></b>
+				<a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2310.02255" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/arxiv23_mathvista.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/MathVista" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/arxiv23_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
 
 		<!-- Chameleon -->
 		<div class="row">
@@ -1219,7 +1259,15 @@
 	<div class="container">
 		<h3 id="Service" style="">Professional Service</h3>
 		<hr>
-		<h4 id="Service" style="">Workshops and Tutorials</h3>
+		<h4 id="Service" style="">Conferences</h4>
+			<ul>
+				<li>
+					<strong>Program Chair</strong>, 
+					<a href="https://socalnlp.github.io/" target="_blank">The 4th Southern California Natural Language Symposium (SoCal NLP)</a>,
+					Los Angeles, 2023.11
+				</li>
+			</ul>
+		<h4 id="Service" style="">Workshops and Tutorials</h4>
 			<ul>
 				<li>
 					<strong>Co-chair</strong>, NeurIPS 2022 Workshop on
@@ -1244,8 +1292,9 @@
 					Remote, 2021.12
 				</li>
 			</ul>
-			<h4 id="Service" style="">Program Committee Member</h3>
+			<h4 id="Service" style="">Program Committee Member</h4>
 				<ul>
+					<li> <strong>2024</strong>: ICLR, ARR</li>
 					<li> <strong>2023</strong>: NeurIPS, ICLR, ACL, EMNLP, AAAI</li>
 					<li> <strong>2022</strong>: NeurIPS, ICLR, CVPR, AAAI,
 						COLING</li>
@@ -1281,11 +1330,15 @@
 		<h3 id="Awards" style="">Selected Awards</h3>
 		<hr>
 		<ul>
+			<li><strong>Bloomberg PhD Fellowship</strong>, 2024</li>
+			<li><strong>Qualcomm Innovation Fellowship</strong>, 2024</li>
 			<li><strong>UCLA Dissertation Year Fellowship</strong>, 2023</li>
+			<li><strong>Amazon PhD Fellowship</strong>, 2023</li>
 			<!-- <li><strong>AAAI Travel Award</strong>, 2023</li> -->
 			<li><strong>NeurIPS Top Reviewer</strong>, 2022</li>
 			<li><strong>NeurIPS Scholar Award</strong>, 2022</li>
 			<li><strong>ICLR Highlighted Reviewer</strong>, 2022</li>
+			<li><strong>ACL-IJCNLP Diversity & Inclusion Award</strong>, 2021</li>
 			<!-- <li><strong>NeurIPS Travel Award</strong>, 2019</li> -->
 			<!-- <li><strong>ICCV Travel Award</strong>, 2019</li> -->
 			<li><strong>Outstanding Master Thesis Award</strong>, Tsinghua University, 2018</li>
