--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 				<a href="https://arxiv.org/abs/2310.02255" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/arxiv23_mathvista.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/MathVista" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1709757360758288448" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv23_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
