--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<li>
 							<strong>Mathematical reasoning</strong> for problem solving, theorem proving, and scientific discovery 
 							<a href="https://mathvista.github.io/" target="_blank">[MathVista]</a>
-							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[TheoremQA]</a>
+							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[EMNLP-23]</a>
 							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[ACL-23]</a>
 							<a href="https://arxiv.org/abs/2209.14610" target="_blank">[ICLR-23]</a>
 							<a href="https://arxiv.org/abs/2212.02746" target="_blank">[EMNLP-22]</a>
@@ -201,6 +201,11 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
+				<li>
+					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
+					One paper on mathematical reasoning is accepted to
+					<b><a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023</a></b>.
+				</li>
 				<li>
 					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
 					One paper on mathematical reasoning in visual contexts
@@ -565,7 +570,7 @@
 		<!-- TheoremQA -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv23_theoremqa.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/emnlp23_theoremqa.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<!-- <a href="https://github.com/wenhuchen/TheoremQA">
@@ -575,12 +580,12 @@
 					<font color="black">TheoremQA: A Theorem-driven Question Answering Dataset</font>
 				</b><br>
 				Wenhu Chen, Ming Yin, Max Ku, <b>Pan Lu</b>, Yixin Wan, Xueguang Ma, Jianyu Xu, Xinyi Wang, Tony Xia<br>
-				<b><a href="https://arxiv.org/abs/2305.12524" target="_blank">arXiv:2305.12524&nbsp;</a></b>
+				<b><a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2305.12524" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/arxiv23_theoremqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="papers/emnlp23_theoremqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/wenhuchen/TheoremQA" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://twitter.com/WenhuChen/status/1660832837715611648" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="bibs/arxiv23_theoremqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/emnlp23_theoremqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
