--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@
 			<ul>
 				<li>
 					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
+					Honored to serve as PC Chair and co-organize
+					<b><a href="https://socalnlp.github.io/symp23/index.html" target="_blank">SoCal NLP 2023</a></b>. See you in LA!
+				</li>
+				<li>
+					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
 					One paper on mathematical reasoning is accepted to
 					<b><a href="https://2023.emnlp.org/" target="_blank">EMNLP 2023</a></b>.
 				</li>
@@ -1268,7 +1273,7 @@
 			<ul>
 				<li>
 					<strong>Program Chair</strong>, 
-					<a href="https://socalnlp.github.io/" target="_blank">The 4th Southern California Natural Language Symposium (SoCal NLP)</a>,
+					<a href="https://socalnlp.github.io/symp23/index.html" target="_blank">The 4th Southern California Natural Language Symposium (SoCal NLP)</a>,
 					Los Angeles, 2023.11
 				</li>
 			</ul>
