--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<div class="col-md-12">
 					<br>
 					<p> 
-						I'm currently a fourth-year Ph.D. candidate in the Computer Science Department at UCLA, supervised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
+						I'm currently a fifth-year Ph.D. candidate in the Computer Science Department at UCLA, supervised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
 						Amazon PhD Fellowship, Bloomberg PhD Fellowship, Qualcomm Innovation Fellowship, UCLA Dissertation Year Fellowship, 
 						<a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
 						<a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>, 
@@ -201,6 +201,11 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
+				<li>
+					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
+					The 112-page study on GPT-4V, Bard, and others on visual math reasoning is available
+					<b><a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank">here</a></b>.
+				</li>
 				<li>
 					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
 					Honored to serve as PC Chair and co-organize
@@ -453,14 +458,15 @@
 					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
 				</a>
 				<b>
-					<font color="black">MathVista: Evaluating Mathematical Reasoning of Foundation Models in Visual Contexts</font>
+					<font color="black">MathVista: Evaluating Math Reasoning in Visual Contexts with GPT-4V, Bard, and Other Large Multimodal Models</font>
 				</b><br>
 				<b>Pan Lu</b>, Hritik Bansal, Tony Xia, Jiacheng Liu, Chunyuan Li, Hannaneh Hajishirzi, Hao Cheng, Kai-Wei Chang, Michel Galley, Jianfeng Gao
 				<br>
-				<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">arXiv:2310.02255&nbsp;</a></b>
+				<b><a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank">arXiv:2310.02255&nbsp;</a></b>
 				<a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="https://arxiv.org/abs/2310.02255" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<!-- <a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a> -->
 				<a href="papers/arxiv23_mathvista.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank"> <small>[Dataset]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/MathVista" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1709757360758288448" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
@@ -1315,6 +1321,10 @@
 				<h4 id="Service" style="">Journal Reviewer</h3>
 					<ul>
 						<li>
+							<a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34"
+								target="_blank">IEEE Transactions on Pattern Analysis and Machine Intelligence</a>
+						</li>
+						<li>
 							<a href="https://www.springer.com/journal/11263/"
 								target="_blank">International Journal of Computer Vision</a>
 						</li>
@@ -1344,6 +1354,7 @@
 			<li><strong>Qualcomm Innovation Fellowship</strong>, 2024</li>
 			<li><strong>UCLA Dissertation Year Fellowship</strong>, 2023</li>
 			<li><strong>Amazon PhD Fellowship</strong>, 2023</li>
+			<li><strong>NeurIPS Scholar Award</strong>, 2023</li>
 			<!-- <li><strong>AAAI Travel Award</strong>, 2023</li> -->
 			<li><strong>NeurIPS Top Reviewer</strong>, 2022</li>
 			<li><strong>NeurIPS Scholar Award</strong>, 2022</li>
