--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 				<li>
 					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
 					The 112-page study on GPT-4V, Bard, and others on visual math reasoning is available
-					<b><a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank">here</a></b>.
+					<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">here</a></b>.
 				</li>
 				<li>
 					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
@@ -219,7 +219,7 @@
 				<li>
 					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
 					One paper on mathematical reasoning in visual contexts
-					(<b><a href="https://arxiv.org/abs/2310.02255." target="_blank">MathVista</a></b>)
+					(<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">MathVista</a></b>)
 					is submitted to <b>Preprint</b>.
 				</li>
 				<li>
@@ -462,10 +462,10 @@
 				</b><br>
 				<b>Pan Lu</b>, Hritik Bansal, Tony Xia, Jiacheng Liu, Chunyuan Li, Hannaneh Hajishirzi, Hao Cheng, Kai-Wei Chang, Michel Galley, Jianfeng Gao
 				<br>
-				<b><a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank">arXiv:2310.02255&nbsp;</a></b>
+				<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">arXiv:2310.02255&nbsp;</a></b>
 				<a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<!-- <a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a> -->
-				<a href="papers/arxiv23_mathvista.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2310.02255.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank"> <small>[Dataset]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/MathVista" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1717313355780964608" target="_blank"> <small>[Twitter]&nbsp;</small></a>
