--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 		<!-- Chameleon -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv23_chameleon.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/neurips23_chameleon.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<a href="https://chameleon-llm.github.io/">
@@ -492,11 +492,11 @@
 				<b><a href="https://arxiv.org/abs/2304.09842" target="_blank">NeurIPS 2023&nbsp;</a></b>
 				<a href="https://chameleon-llm.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://arxiv.org/abs/2304.09842" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/arxiv23_chameleon.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="papers/neurips23_chameleon.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/chameleon-llm" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1648879085115052033" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/_akhaliq/status/1648851856930533378" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="bibs/arxiv23_chameleon.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/neurips23_chameleon.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<a id="best" href="https://alphasignalai.beehiiv.com/p/weeks-top-5-ai-papers?utm_source=alphasignalai.beehiiv.com&utm_medium=newsletter&utm_campaign=this-week-s-top-5-ai-papers" target="_blank">
 					<font color="red"><b>Best Weekly AI Paper</b> </font>
 				</a>
