--- a/index.html
+++ b/index.html
@@ -211,8 +211,17 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[12/2023]&nbsp; <font color="red">New!</font></strong>
+					I am attending <b><a href="https://nips.cc/Conferences/2023" target="_blank">NeurIPS 2023</a></b> from Dec 10 to Dec 16. See you in New Orleans!
+				</li>
+				<li>
+					<strong>[12/2023]&nbsp; <font color="red">New!</font></strong>
+					Google's <b><a href="https://blog.google/technology/ai/google-gemini-ai/?utm_source=twitter&utm_medium=social&utm_campaign=GDMGemini#performance" target="_blank">Gemini</a></b> benchmarks our <b><a href="https://arxiv.org/abs/2310.02255" target="_blank">MathVista</a></b> for evaluating math reasoning in visual contexts!
+				</li>
+				<li>
 					<strong>[11/2023]&nbsp; <font color="red">New!</font></strong>
 					Honored to be covered by <b><a href="https://www.cs.ucla.edu/phd-student-pan-lu-wins-2023-qualcomm-innovation-fellowship/" target="_blank">UCLA CS</a></b> for winning <b><a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a></b>. Thanks!
+				</li>
 				<li>
 					<strong>[10/2023]&nbsp; <font color="red">New!</font></strong>
 					The 112-page study on GPT-4V, Bard, and others on visual math reasoning is available
@@ -478,8 +487,10 @@
 				<a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="https://arxiv.org/pdf/2310.02255.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank"> <small>[Dataset]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/MathVista" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank"> <small>[Dataset]&nbsp;</small></a>
+				<a href="https://mathvista.github.io/#leaderboard" target="_blank"> <small>[Leaderboard]&nbsp;</small></a>
+				<a href="https://mathvista.github.io/#visualization" target="_blank"> <small>[Visualize]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1717313355780964608" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv23_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
