--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
 			<ul>
 				<li>
 					<strong>[12/2023]&nbsp; <font color="red">New!</font></strong>
+					I am co-organizing the <b><a href="https://cvpr.thecvf.com/" target="_blank">Tool-Augmented VIsion</a></b>
+					Workshop at <b><a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2024</a></b>. See you in Seattle!
+				</li>
+				<li>
+					<strong>[12/2023]&nbsp; <font color="red">New!</font></strong>
 					I am attending <b><a href="https://nips.cc/Conferences/2023" target="_blank">NeurIPS 2023</a></b> from Dec 10 to Dec 16. See you in New Orleans!
 				</li>
 				<li>
@@ -1176,15 +1181,15 @@
 		<hr>
 		<ul>
 			<li>
-				<strong>University of California, Los Angeles</strong>, 2019.9 - Present<br>
+				<strong>University of California, Los Angeles</strong>, 2019 - Present<br>
 				Ph.D. Student in Computer Science
 			</li>
 			<li>
-				<strong>Tsinghua University</strong>, 2015.8 - 2018.7<br>
+				<strong>Tsinghua University</strong>, 2015 - 2018<br>
 				M.Eng. in Computer Science
 			</li>
 			<li>
-				<strong>Beijing Institute of Technology</strong>, 2011.8 - 2015.7<br>
+				<strong>Beijing Institute of Technology</strong>, 2011 - 2015<br>
 				B.S. in Electrical Engineering
 			</li>
 		</ul>
@@ -1198,9 +1203,9 @@
 		<ul>
 			<li>
 				<strong>Research Intern</strong>, <em>Microsoft Research</em>, 2022.12 - Present <br>
-				Advisors: 
+				Mentors: 
 				Dr. <a href="https://sites.google.com/site/hcheng2site" target="_blank">Hao Cheng</a>,
-				Dr. <a href="https://www.microsoft.com/en-us/research/people/bapeng/" target="_blank">Baolin Peng</a>,
+				<!-- Dr. <a href="https://www.microsoft.com/en-us/research/people/bapeng/" target="_blank">Baolin Peng</a>, -->
 				Dr. <a href="https://www.microsoft.com/en-us/research/people/mgalley/" target="_blank">Michel Galley</a>,
 				Dr. <a href="https://www.microsoft.com/en-us/research/people/jfgao/" target="_blank">Jianfeng Gao</a>
 			</li>
@@ -1211,13 +1216,13 @@
 			</li> -->
 			<li>
 				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - 2022.12 <br>
-				Advisors: Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
+				Mentors: Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
 				Dr. <a href="https://allenai.org/team/peterc" target="_blank">Peter Clark</a>
 			</li>
 			<li>
 				<strong>Research Intern</strong>, <em>Document Intelligence Group</em>, <em>Adobe Research</em>, 2021.6
 				- 2021.9 <br>
-				Advisors: Dr. <a href="https://research.adobe.com/person/jiuxiang-gu/" target="_blank">Jiuxiang Gu</a>,
+				Mentors: Dr. <a href="https://research.adobe.com/person/jiuxiang-gu/" target="_blank">Jiuxiang Gu</a>,
 				Dr. <a href="https://research.adobe.com/person/tong-sun/" target="_blank">Tong Sun</a>
 			</li>
 			<!-- <li>
@@ -1228,7 +1233,7 @@
 			<li>
 				<strong>Research Intern</strong>, <em>Natural Language Computing Group</em>, <em> Microsoft Research
 					Asia</em>, 2017.11 - 2018.5<br>
-				Advisors: Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei
+					Mentors: Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei
 					Ji</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan
 					Duan</a>, Dr. <a href="https://www.microsoft.com/en-us/research/people/mingzhou/"
 					target="_blank">Ming Zhou</a>
@@ -1309,26 +1314,30 @@
 		<h4 id="Service" style="">Workshops and Tutorials</h4>
 			<ul>
 				<li>
-					<strong>Co-chair</strong>, NeurIPS 2022 Workshop on
-					<a href="https://mathai2023.github.io/" target="_blank">MATH-AI: The 3rd Workshop on Mathematical Reasoning and AI</a>,
-					New Orleans, 2023.12
+					<strong>Co-organizer</strong>, Workshop on
+					<a href="https://cvpr.thecvf.com/Conferences/2024" target="_blank">Tool-Augmented VIsion (TAVI)</a> 
+					at CVPR 2024
 				</li>
 				<li>
-					<strong>Primary speaker</strong>, IJCAI 2023 Tutorial on
-					<a href="https://ijcai-23.org/" target="_blank">Deep Learning in Mathematical Reasoning: Recent Advances and Beyond</a>,
-					Macao, 2023.08
+					<strong>Co-organizer</strong>, Workshop on
+					<a href="https://mathai2023.github.io/" target="_blank">MATH-AI: The 3rd Workshop on Mathematical Reasoning and AI</a> 
+					at NeurIPS 2023
 				</li>
 				<li>
-					<strong>Co-chair</strong>, NeurIPS 2022 Workshop on
-					<a href="https://mathai2022.github.io/" target="_blank">MATH-AI: Toward Human-Level Mathematical
-						Reasoning</a>,
-					New Orleans, 2022.12
+					<strong>Co-organizer</strong>, Tutorial on
+					<a href="https://ijcai-23.org/" target="_blank">Deep Learning in Mathematical Reasoning: Recent Advances and Beyond</a> 
+					at IJCAI 2023
 				</li>
 				<li>
-					<strong>Co-chair</strong>, NeurIPS 2021 Workshop on
-					<a href="https://mathai4ed.github.io/" target="_blank">Math AI for Education (MATHAI4ED): Bridging
-						the Gap Between Research and Smart Education</a>,
-					Remote, 2021.12
+					<strong>Co-organizer</strong>, Workshop on
+					<a href="https://mathai2022.github.io/" target="_blank">MATH-AI: Toward Human-Level Mathematical Reasoning</a> 
+					at NeurIPS 2022
+				</li>
+				<li>
+					<strong>Co-organizer</strong>, Workshop on
+					<a href="https://mathai4ed.github.io/" target="_blank">Math AI for Education: Bridging
+						the Gap Between Research and Smart Education</a> 
+					at NeurIPS 2021
 				</li>
 			</ul>
 			<h4 id="Service" style="">Program Committee Member</h4>
@@ -1338,8 +1347,7 @@
 					<li> <strong>2022</strong>: NeurIPS, ICLR, CVPR, AAAI,
 						COLING</li>
 					<li> <strong>2021</strong>: NeurIPS, ICLR, CVPR, ICCV</li>
-					<li> <strong>2020</strong>: NeurIPS </li>
-					<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
+					<li> <strong>2020 and before</strong>: NeurIPS, AAAI, SIGKDD, ICDM, PAKDD</li>
 				</ul>
 				<h4 id="Service" style="">Journal Reviewer</h3>
 					<ul>
